サイドバー追加

--- a/html/index.html
+++ b/html/index.html
@@ -9,17 +9,23 @@
     <header>
         <div class="header">
             <h1 class="header-title">asobiba</h1>
+            <ul class="header-navi">
+                <li><a>item1</a></li>
+                <li><a>item2</a></li>
+                <li><a>item3</a></li>
+            </ul>
         </div>
     </header>
     <nav>
         <label for="drawer-checkbox" class="menu-btn">三</label>
         <input id="drawer-checkbox" type="checkbox" style="display: none;">
         <ul class="navi">
-            <li>item1</li>
-            <li>item2</li>
-            <li>item3</li>
+            <li><a>item1</a></li>
+            <li><a>item2</a></li>
+            <li><a>item3</a></li>
         </ul>
     </nav>
+
     <main class="main">
         <article class="article">
             <section class="article-header">
@@ -85,6 +91,11 @@
             </section>
         </article>
     </main>
+    <aside>
+        <div class="side-bar">
+            サイドバー
+        </div>
+    <aside>
     <footer>
         <div class="footer">
             <div>フッターです</div>
