--- a/html/index.html
+++ b/html/index.html
@@ -6,26 +6,25 @@
     <link href="../css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <div class="header">
-            <h1 class="header-title">asobiba</h1>
-            <ul class="header-navi">
-                <li><a>item1</a></li>
-                <li><a>item2</a></li>
-                <li><a>item3</a></li>
-            </ul>
-        </div>
-    </header>
     <nav>
         <label for="drawer-checkbox" class="menu-btn">三</label>
         <input id="drawer-checkbox" type="checkbox" style="display: none;">
         <ul class="navi">
-            <li><a>item1</a></li>
-            <li><a>item2</a></li>
-            <li><a>item3</a></li>
+            <li><a>ホーム</a></li>
+            <li><a>プロフィール</a></li>
+            <li><a>お問い合わせ</a></li>
         </ul>
     </nav>
-
+    <header>
+        <div class="header">
+            <h1 class="header-title">asobiba</h1>
+            <ul class="header-navi">
+                <li><a>ホーム</a></li>
+                <li><a>プロフィール</a></li>
+                <li><a>お問い合わせ</a></li>
+            </ul>
+        </div>
+    </header>
     <main class="main">
         <article class="article">
             <section class="article-header">
@@ -92,8 +91,8 @@
         </article>
     </main>
     <aside>
-        <div class="side-bar">
-            サイドバー
+        <div class="side">
+            <div class="side-content">サイドバー</div>
         </div>
     <aside>
     <footer>
