--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,21 @@
     <link href="../css/style.css" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <div class="header">
+            <div class="container">
+                <h1 class="header-title">asobiba</h1>
+                <ul class="header-navi">
+                    <li><a>ホーム</a></li>
+                    <li><a>プロフィール</a></li>
+                    <li><a>お問い合わせ</a></li>
+                </ul>
+                <label for="drawer-checkbox" class="menu-btn">三</label>
+            </div>
+        </div>
+    </header>
     <nav>
-        <label for="drawer-checkbox" class="menu-btn">三</label>
+        <!-- <label for="drawer-checkbox" class="menu-btn">三</label> -->
         <input id="drawer-checkbox" type="checkbox" style="display: none;">
         <ul class="navi">
             <li><a>ホーム</a></li>
@@ -15,16 +28,6 @@
             <li><a>お問い合わせ</a></li>
         </ul>
     </nav>
-    <header>
-        <div class="header">
-            <h1 class="header-title">asobiba</h1>
-            <ul class="header-navi">
-                <li><a>ホーム</a></li>
-                <li><a>プロフィール</a></li>
-                <li><a>お問い合わせ</a></li>
-            </ul>
-        </div>
-    </header>
     <main class="main">
         <article class="article">
             <section class="article-header">
