スタイル分離

--- a/pub/html/index.html
+++ b/pub/html/index.html
@@ -4,7 +4,8 @@
     <title>asobiba</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="../css/ress.css" rel="stylesheet" />
-    <link href="../css/index.css" rel="stylesheet" />
+    <link href="../css/common.css" rel="stylesheet" />
+    <link href="../css/header.css" rel="stylesheet" />
 </head>
 <body>
     <header class="global-header">
