ファイル追加

--- a/pub/html/work.html
+++ b/pub/html/work.html
@@ -6,7 +6,6 @@
     <link href="../css/ress.css" rel="stylesheet" />
     <link href="../css/common.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
-    <link href="../css/index.css" rel="stylesheet" />
 </head>
 <body>
     <header class="global-header">
@@ -23,8 +22,8 @@
             </nav>
         </div>
     </header>
-    <main class="index-main">
-        index
+    <main class="main">
+        work
     </main>
 </body>
 </html>
