ブログトップ画面作成

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -6,11 +6,12 @@
     <link href="../css/ress.css" rel="stylesheet" />
     <link href="../css/common.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
+    <link href="../css/blog.css" rel="stylesheet" />
 </head>
 <body>
     <header class="global-header">
         <div class="global-header__container">
-            <h1 class="global-header__title">asobiba</h1>
+            <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
             <label for="drawer-checkbox" class="global-header__label">三</label>
             <input type="checkbox" id="drawer-checkbox" class="global-header__checkbox" />
             <nav class="global-navi">
@@ -22,9 +23,61 @@
             </nav>
         </div>
     </header>
-    <main class="main">
-        blog
+    <main class="blog-main">
+        <div class="article">
+            <h2 class="article__title">
+                <a href="./article.html">test1</a>
+            </h2>
+            <div class="article__cotent">
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            </div>
+        </div>
+        <div class="article">
+            <h2 class="article__title">
+                <a href="./article.html">test2</a>
+            </h2>
+            <div class="article__cotent">
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            </div>
+        </div>
+        <div class="article">
+            <h2 class="article__title">
+                <a href="./article.html">test3</a>
+            </h2>
+            <div class="article__cotent">
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            </div>
+        </div>
+        <div class="article">
+            <h2 class="article__title">
+                <a href="./article.html">test4</a>
+            </h2>
+            <div class="article__cotent">
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            </div>
+        </div>
+        <div class="article">
+            <h2 class="article__title">
+                <a href="./article.html">test5</a>
+            </h2>
+            <div class="article__cotent">
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            </div>
+        </div>
     </main>
+    <footer class="global-footer">
+        <div class="global-footer__container"></div>
+    </footer>
 </body>
 </html>
 
