--- a/pub/html/about.html
+++ b/pub/html/about.html
@@ -10,7 +10,7 @@
 <body>
     <header class="global-header">
         <div class="global-header__container">
-            <h1 class="global-header__title">asobiba</h1>
+            <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
             <label for="drawer-checkbox" class="global-header__label">三</label>
             <input type="checkbox" id="drawer-checkbox" class="global-header__checkbox" />
             <nav class="global-navi">
