--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -12,9 +12,11 @@
     <header class="global-header">
         <div class="global-header__container">
             <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
-            <label for="drawer-checkbox" class="global-header__label">三</label>
-            <input type="checkbox" id="drawer-checkbox" class="global-header__checkbox" />
             <nav class="global-navi">
+                <label for="drawer-checkbox" class="global-navi__label">
+                    <span class="global-navi__icon"></span>
+                </label>
+                <input type="checkbox" id="drawer-checkbox" class="global-navi__checkbox" />
                 <ul class="global-navi__list">
                     <li><a href="./work.html">Work</a></li>
                     <li><a href="./blog.html">Blog</a></li>
