--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -13,10 +13,13 @@
         <div class="global-header__container">
             <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
             <nav class="global-navi">
+                <input type="checkbox" id="drawer-checkbox" class="global-navi__checkbox" />
                 <label for="drawer-checkbox" class="global-navi__label">
                     <span class="global-navi__icon"></span>
                 </label>
-                <input type="checkbox" id="drawer-checkbox" class="global-navi__checkbox" />
+                <label for="drawer-checkbox" class="global-navi__label--close">
+                    <span class="global-navi__icon--close"></span>
+                </label>
                 <ul class="global-navi__list">
                     <li><a href="./work.html">Work</a></li>
                     <li><a href="./blog.html">Blog</a></li>
