--- a/pub/html/article.html
+++ b/pub/html/article.html
@@ -3,31 +3,31 @@
 <head>
     <title>asobiba</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="../css/ress.css" rel="stylesheet" />
+    <link href="../css/common.css" rel="stylesheet" />
+    <link href="../css/header.css" rel="stylesheet" />
+    <link href="../css/article.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <div class="header">
-            <div class="container">
-                <h1 class="header-title">asobiba</h1>
-                <ul class="header-navi">
-                    <li><a>ホーム</a></li>
-                    <li><a>プロフィール</a></li>
-                    <li><a>お問い合わせ</a></li>
+    <header class="global-header">
+        <div class="global-header__container">
+            <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
+            <nav class="global-navi">
+                <input type="checkbox" id="drawer-checkbox" class="global-navi__checkbox" />
+                <label for="drawer-checkbox" class="global-navi__label">
+                    <span class="global-navi__icon"></span>
+                </label>
+                <label for="drawer-checkbox" class="global-navi__label--close">
+                    <span class="global-navi__icon--close"></span>
+                </label>
+                <ul class="global-navi__list">
+                    <li><a href="./work.html">Work</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
+                    <li><a href="./about.html">About</a></li>
                 </ul>
-                <label for="drawer-checkbox" class="menu-btn">三</label>
-            </div>
+            </nav>
         </div>
     </header>
-    <nav>
-        <!-- <label for="drawer-checkbox" class="menu-btn">三</label> -->
-        <input id="drawer-checkbox" type="checkbox" style="display: none;">
-        <ul class="navi">
-            <li><a>ホーム</a></li>
-            <li><a>プロフィール</a></li>
-            <li><a>お問い合わせ</a></li>
-        </ul>
-    </nav>
     <main class="main">
         <article class="article">
             <section class="article-header">
