相対パスからルートパスに変更

--- a/pub/html/article.html
+++ b/pub/html/article.html
@@ -3,15 +3,15 @@
 <head>
     <title>asobiba</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="../css/ress.css" rel="stylesheet" />
-    <link href="../css/common.css" rel="stylesheet" />
-    <link href="../css/header.css" rel="stylesheet" />
-    <link href="../css/article.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/ress.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/common.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/article.css" rel="stylesheet" />
 </head>
 <body>
     <header class="global-header">
         <div class="global-header__container">
-            <h1 class="global-header__title"><a href="./index.html">asobiba</a></h1>
+            <h1 class="global-header__title"><a href="/dev/blog/pub/html/index.html">asobiba</a></h1>
             <nav class="global-navi">
                 <input type="checkbox" id="drawer-checkbox" class="global-navi__checkbox" />
                 <label for="drawer-checkbox" class="global-navi__label">
@@ -21,9 +21,9 @@
                     <span class="global-navi__icon--close"></span>
                 </label>
                 <ul class="global-navi__list">
-                    <li><a href="./work.html">Work</a></li>
-                    <li><a href="./blog.html">Blog</a></li>
-                    <li><a href="./about.html">About</a></li>
+                    <li><a href="/dev/blog/pub/html/work.html">Work</a></li>
+                    <li><a href="/dev/blog/pub/html/blog.html">Blog</a></li>
+                    <li><a href="/dev/blog/pub/html/about.html">About</a></li>
                 </ul>
             </nav>
         </div>
