記事データ出力機能追加

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -83,6 +83,9 @@
     <footer class="global-footer">
         <div class="global-footer__container"></div>
     </footer>
+    <!-- TODO: バンドルする -->
+    <script src="/dev/blog/pub/js/utility.js"></script>
+    <script src="/dev/blog/pub/js/blog.js"></script>
 </body>
 </html>
 
