--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -30,53 +30,19 @@
     </header>
     <main class="blog-main">
         <div class="article">
-            <h2 class="article__title">
+            <h2 class="article-title">
                 <a href="./article.html">test1</a>
             </h2>
-            <div class="article__cotent">
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            <div class="article-content">
+                <img class="article-content__image" src="/dev/blog/pub/img/sample1.jpeg">
+                <img class="article-content__image" src="/dev/blog/pub/img/sample1.jpeg">
+                <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
+                <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
             </div>
-        </div>
-        <div class="article">
-            <h2 class="article__title">
-                <a href="./article.html">test2</a>
-            </h2>
-            <div class="article__cotent">
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-            </div>
-        </div>
-        <div class="article">
-            <h2 class="article__title">
-                <a href="./article.html">test3</a>
-            </h2>
-            <div class="article__cotent">
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-            </div>
-        </div>
-        <div class="article">
-            <h2 class="article__title">
-                <a href="./article.html">test4</a>
-            </h2>
-            <div class="article__cotent">
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-            </div>
-        </div>
-        <div class="article">
-            <h2 class="article__title">
-                <a href="./article.html">test5</a>
-            </h2>
-            <div class="article__cotent">
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                <p class="article__text">hogehogehogehogehogehogehogehogehogehoge</p>
+            <div class="article-fotter">
+                <div class="article-fotter__comment">Comment</div>
+                <time class="article-fotter__published">March 6th, 2020</time>
             </div>
         </div>
     </main>
