フッター追加

--- a/pub/html/article.html
+++ b/pub/html/article.html
@@ -6,6 +6,7 @@
     <link href="/dev/blog/pub/css/ress.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/common.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/footer.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/article.css" rel="stylesheet" />
 </head>
 <body>
@@ -98,15 +99,10 @@
             <div class="side-content">サイドバー</div>
         </div>
     <aside>
-    <footer>
-        <div class="footer">
-            <div>フッターです</div>
-            <ul>
-                <li><a href="/tag/tag1">Top</li>
-                <li><a href="/tag/tag1">About</li>
-                <li><a href="/tag/tag1">Contact</li>
-                <li><a href="/tag/tag1">Help</li>
-            </ul>
+    <footer class="global-footer">
+        <div class="footer-container">
+            <span class="nomeaning" title="It doesn't really mean anything">I like cake!</span>
+            <span class="nomeaning copywirte" title="It doesn't really mean anything">© asobiba. 2020</span>
         </div>
     </footer>
 </body>
