--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -6,6 +6,7 @@
     <link href="/dev/blog/pub/css/ress.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/common.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/footer.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/blog.css" rel="stylesheet" />
 </head>
 <body>
@@ -35,7 +36,6 @@
             </h2>
             <div class="article-content">
                 <img class="article-content__image" src="/dev/blog/pub/img/sample1.jpeg">
-                <img class="article-content__image" src="/dev/blog/pub/img/sample1.jpeg">
                 <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
                 <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
                 <p class="article-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
@@ -47,7 +47,10 @@
         </div>
     </main>
     <footer class="global-footer">
-        <div class="global-footer__container"></div>
+        <div class="footer-container">
+            <span class="nomeaning" title="It doesn't really mean anything">I like cake!</span>
+            <span class="nomeaning copywirte" title="It doesn't really mean anything">© asobiba. 2020</span>
+        </div>
     </footer>
     <!-- TODO: バンドルする -->
     <script src="/dev/blog/pub/js/utility.js"></script>
