--- a/pub/html/index.html
+++ b/pub/html/index.html
@@ -6,6 +6,7 @@
     <link href="/dev/blog/pub/css/ress.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/common.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/footer.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/index.css" rel="stylesheet" />
 </head>
 <body>
@@ -31,6 +32,12 @@
     <main class="index-main">
         index
     </main>
+    <footer class="global-footer">
+        <div class="footer-container">
+            <span class="nomeaning" title="It doesn't really mean anything">I like cake!</span>
+            <span class="nomeaning copywirte" title="It doesn't really mean anything">© asobiba. 2020</span>
+        </div>
+    </footer>
 </body>
 </html>
 
