サイドバーにスタイル追加

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -33,7 +33,16 @@
         <div class="row">
             <aside class="blog-aside">
                 <div class="card">
-                    col1
+                    <div class="card-header">
+                        <span class="card-header__title--aside">Tags</span>
+                    </div>
+                    <div class="card-content">
+                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
+                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
+                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
+                    </div>
+                    <div class="card-fotter">
+                    </div>
                 </div>
             </aside>
             <main class="blog-main">
