タイトルクリックによるページ遷移を実装

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -47,9 +47,9 @@
             </aside>
             <main class="blog-main">
                 <article class="card">
-                    <h2 class="card-header">
+                    <div class="card-header">
                         <a href="./article.html">test1</a>
-                    </h2>
+                    </div>
                     <div class="card-content">
                         <img class="card-content__image" src="/dev/blog/pub/img/sample1.jpeg">
                         <p class="card-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
