naviスタイル変更

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -46,21 +46,7 @@
                 </div>
             </aside>
             <main class="blog-main">
-                <article class="card">
-                    <div class="card-header">
-                        <a href="./article.html">test1</a>
-                    </div>
-                    <div class="card-content">
-                        <img class="card-content__image" src="/dev/blog/pub/img/sample1.jpeg">
-                        <p class="card-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                        <p class="card-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                        <p class="card-content__text">hogehogehogehogehogehogehogehogehogehoge</p>
-                    </div>
-                    <div class="card-fotter">
-                        <div class="card-fotter__comment">Comment</div>
-                        <time class="card-fotter__published">March 6th, 2020</time>
-                    </div>
-                </article>
+                <!-- js set html here -->
             </main>
         </div>
     </div>
