タグ絞り込み機能実装

--- a/pub/html/article.html
+++ b/pub/html/article.html
@@ -33,18 +33,7 @@
     <div class="blog-container">
         <div class="row">
             <aside class="blog-aside">
-                <div class="card">
-                    <div class="card-header">
-                        <span class="card-header__title--aside">Tags</span>
-                    </div>
-                    <div class="card-content">
-                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
-                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
-                        <a class="card-content__tag" href="/dev/blog/pub/html/blog/">tag1</a>
-                    </div>
-                    <div class="card-fotter">
-                    </div>
-                </div>
+                <!-- js set html here -->
             </aside>
             <main class="blog-main">
                 <!-- js set html here -->
