--- a/pub/html/regester.html
+++ b/pub/html/regester.html
@@ -35,6 +35,8 @@
             </div>
         </form>
     </div>
+    <script src="/dev/blog/pub/js/utility.js"></script>
+    <script src="/dev/blog/pub/js/regester.js"></script>
 </body>
 </html>
 
