--- a/pub/html/regester.html
+++ b/pub/html/regester.html
@@ -11,27 +11,31 @@
 </head>
 <body>
     <div class="regester-wrapper">
-        <form class="regester-form" action="/dev/blog/pub/php/regester.php" method="post">
+        <form class="regester-form">
             <div class="regester-title">
                 <p class="regester-title__name">Title</p>
-                <input type="text" name="title" class="regester-title__input">
+                <input type="text" id="titleInput" class="regester-title__input">
             </div>
             <div class="regester-image">
                 <p class="regester-image__name">Image</p>
-                <input type="file" name="image" class="regester-image__input"　accept="image/*">
+                <label for="imageInput" id="imgBtn" class="regester-image__label">
+                    select image
+                </label>
+                <div id="imgDisplay"></div>
+                <input type="file" id="imageInput" class="regester-image__input" accept="image/*" multiple>
             </div>
             <div class="regester-text">
                 <p class="regester-text__name">Text</p>
-                <textarea name="text" class="regester-text__input"></textarea>
+                <textarea id="textInput" class="regester-text__input"></textarea>
             </div>
             <div class="regester-tag">
                 <p class="regester-tag__name">Tag</p>
-                <input type="text" name="tag" class="regester-tag__input">
-                <button type="button" class="regester-tag__button">add</button>
+                <input type="text" name="tag" id="tagInput" class="regester-tag__input">
+                <button type="button" id="tagBtn" class="regester-tag__button">add</button>
+                <div id="tagDisplay"></div>
             </div>
             <div class="regester-btn">
-                <button class="regester-btn__submit">submit</button>
-                <button class="regester-btn__cancel">cancel</button>
+                <button type="button" id="submitBtn" class="regester-btn__submit">submit</button>
             </div>
         </form>
     </div>
