工事中追加

--- a/pub/html/regester.html
+++ b/pub/html/regester.html
@@ -18,11 +18,8 @@
             </div>
             <div class="regester-image">
                 <p class="regester-image__name">Image</p>
-                <label for="imageInput" id="imgBtn" class="regester-image__label">
-                    select image
-                </label>
-                <div id="imgDisplay"></div>
-                <input type="file" id="imageInput" class="regester-image__input" accept="image/*" multiple>
+                <input type="file" id="imageInput"
+                    class="regester-image__input" accept="image/*" multiple files>
             </div>
             <div class="regester-text">
                 <p class="regester-text__name">Text</p>
@@ -31,11 +28,15 @@
             <div class="regester-tag">
                 <p class="regester-tag__name">Tag</p>
                 <input type="text" name="tag" id="tagInput" class="regester-tag__input">
-                <button type="button" id="tagBtn" class="regester-tag__button">add</button>
+                <button type="button" id="tagBtn" class="regester-tag__button">
+                    add
+                </button>
                 <div id="tagDisplay"></div>
             </div>
             <div class="regester-btn">
-                <button type="button" id="submitBtn" class="regester-btn__submit">submit</button>
+                <button type="button" id="submitBtn" class="regester-btn__submit">
+                    submit
+                </button>
             </div>
         </form>
     </div>
