--- a/pub/html/about.html
+++ b/pub/html/about.html
@@ -7,6 +7,7 @@
     <link href="/dev/blog/pub/css/common.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/footer.css" rel="stylesheet" />
+    <link href="/dev/blog/pub/css/about.css" rel="stylesheet" />
 </head>
 <body>
     <header class="global-header">
@@ -28,8 +29,9 @@
             </nav>
         </div>
     </header>
-    <main class="main">
-        about
+    <main class="about-main">
+        <h1 class="keep-out-message">ただいま工事中です</h1>
+        <img class="keep-out" src="/dev/blog/pub/img/lockdown/keep_out.svg" alt="keep out">
     </main>
     <footer class="global-footer">
         <div class="footer-container">
