--- a/pub/html/index.html
+++ b/pub/html/index.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <main class="index-main">
-        index
+        <h1 class="keep-out-message">ただいま工事中です</h1>
+        <img class="keep-out" src="/dev/blog/pub/img/lockdown/keep_out.svg" alt="keep out">
     </main>
     <footer class="global-footer">
         <div class="footer-container">
