index.htmlにアクセスしたらブログトップに移動する

--- a/pub/html/index.html
+++ b/pub/html/index.html
@@ -8,6 +8,9 @@
     <link href="/dev/blog/pub/css/header.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/footer.css" rel="stylesheet" />
     <link href="/dev/blog/pub/css/index.css" rel="stylesheet" />
+    <script>
+        location.href = 'http://localhost/dev/blog/pub/html/blog.html';
+    </script>
 </head>
 <body>
     <header class="global-header">
