タグ入力機能修正

--- a/pub/html/register.html
+++ b/pub/html/register.html
@@ -29,13 +29,13 @@
                 <p class="register-tag__name">Tag</p>
                 <input type="text" name="tag" id="tagInput" class="register-tag__input">
                 <button type="button" id="tagBtn" class="register-tag__button">
-                    ADD
+                    Add
                 </button>
                 <div id="tagDisplay"></div>
             </div>
             <div class="register-btn">
                 <button type="button" id="submitBtn" class="register-btn__submit">
-                    SUBMIT
+                    Submit
                 </button>
             </div>
         </form>
