--- a/pub/html/login.html
+++ b/pub/html/login.html
@@ -12,10 +12,10 @@
 <body>
     <div class="login-wrapper">
         <form class="login-form">
-            <input type="text" id="js-login-id" class="login-form__id">
-            <input type="pass" id="js-login-pass" class="login-form__pass">
-            <button type="button" id="js-login-btn" class="login-form__btn">
-                LOGIN
+            <input type="text" id="loginID" class="login-form__id" placeholder="User ID">
+            <input type="pass" id="loginPass" class="login-form__pass" placeholder="Password">
+            <button type="button" id="loginBtn" class="login-form__btn">
+                Login
             </button>
         </form>
     </div>
