画像選択フォーム修正

--- a/pub/html/register.html
+++ b/pub/html/register.html
@@ -18,8 +18,12 @@
             </div>
             <div class="register-image">
                 <p class="register-image__name">Image</p>
+                <label for="imageInput" class="register-image__label">
+                    Select image file
+                </label>
                 <input type="file" id="imageInput"
-                    class="register-image__input" accept="image/*" multiple files>
+                    class="register-image__input" accept="image/*" multiple >
+                <div id="imgDisplay"></div>
             </div>
             <div class="register-text">
                 <p class="register-text__name">Text</p>
