設定ファイルを追加して環境依存の変数をまとめた

--- a/pub/html/blog.html
+++ b/pub/html/blog.html
@@ -47,6 +47,7 @@
         </div>
     </footer>
     <!-- TODO: バンドルする -->
+    <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/utility.js"></script>
     <script src="/dev/blog/pub/js/blog.js"></script>
 </body>
