--- a/pub/html/login.html
+++ b/pub/html/login.html
@@ -19,6 +19,7 @@
             </button>
         </form>
     </div>
+    <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/utility.js"></script>
     <script src="/dev/blog/pub/js/login.js"></script>
 </body>
