--- a/pub/html/register.html
+++ b/pub/html/register.html
@@ -44,6 +44,7 @@
             </div>
         </form>
     </div>
+    <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/utility.js"></script>
     <script src="/dev/blog/pub/js/register.js"></script>
 </body>
