--- a/pub/html/article.html
+++ b/pub/html/article.html
@@ -48,6 +48,7 @@
         </div>
     </footer>
     <!-- TODO: バンドルする -->
+    <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/utility.js"></script>
     <script src="/dev/blog/pub/js/blog.js"></script>
 </body>
