--- a/pub/admin/index.html
+++ b/pub/admin/index.html
@@ -13,7 +13,7 @@
     <div class="login-wrapper">
         <form class="login-form">
             <input type="text" id="loginID" class="login-form__id" placeholder="User ID">
-            <input type="pass" id="loginPass" class="login-form__pass" placeholder="Password">
+            <input type="password" id="loginPass" class="login-form__pass" placeholder="Password">
             <button type="button" id="loginBtn" class="login-form__btn">
                 Login
             </button>
