--- a/pub/index.html
+++ b/pub/index.html
@@ -14,18 +14,13 @@
 </head>
 <body>
     <header id="globalHeader" class="global-header"></header>
-    <main class="index-main">
-        <h1 class="keep-out-message">ただいま工事中です</h1>
-        <img class="keep-out" src="/dev/blog/pub/img/lockdown/keep_out.svg" alt="keep out">
-    </main>
-    <footer class="global-footer">
-        <div class="footer-container">
-            <span class="nomeaning" title="It doesn't really mean anything">I like cake!</span>
-            <span class="nomeaning copywirte" title="It doesn't really mean anything">© asobiba. 2020</span>
-        </div>
-    </footer>
+    <main class="index-main"></main>
+    <footer class="global-footer"></footer>
+    
     <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/header.js"></script>
+    <script src="/dev/blog/pub/js/footer.js"></script>
+    <script src="/dev/blog/pub/js/keep_out.js"></script>
 </body>
 </html>
 
