--- a/pub/work/index.html
+++ b/pub/work/index.html
@@ -11,17 +11,14 @@
 </head>
 <body>
     <header id="globalHeader" class="global-header"></header>
-
-    <main class="work-main">
-        <h1 class="keep-out-message">ただいま工事中です</h1>
-        <img class="keep-out" src="/dev/blog/pub/img/lockdown/keep_out.svg" alt="keep out">
-    </main>
-
+    <main class="work-main"></main>
     <footer id="globalFooter" class="global-footer"></footer>
 
     <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/header.js"></script>
     <script src="/dev/blog/pub/js/footer.js"></script>
+    <script src="/dev/blog/pub/js/keep_out.js"></script>
+
 </body>
 </html>
 
