スタイル調整

--- a/pub/admin/register/index.html
+++ b/pub/admin/register/index.html
@@ -34,7 +34,7 @@
         <p class="register-form__name">Tag</p>
         <div class="register-tag">
             <input type="text" name="tag" id="tagInput" class="register-tag__input">
-            <button type="button" id="tagBtn" class="register-tag__button">
+            <button type="button" id="tagBtn" class="register-tag__btn">
                 Add
             </button>
         </div>
