aboutページ実装

--- a/pub/about/index.html
+++ b/pub/about/index.html
@@ -11,13 +11,35 @@
 </head>
 <body>
     <header id="globalHeader" class="global-header"></header>
-    <main class="about-main"></main>
+    <main class="about-main">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-header about"></div>
+                    <div class="card-content about">
+                        <div class="avater">
+                            <img src="/dev/blog/pub/img/avater/enemy.svg" alt="avater">
+                        </div>
+                        <p class="card-content__text">
+                            4年目の文系エンジニアです。
+                        </p>
+                        <p class="card-content__text">
+                            技術系のアウトプットをしていきたいと思っています。
+                        </p>
+                        <p class="card-content__text">
+                            よろしくお願いします。
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer id="globalFooter" class="global-footer"></footer>
 
     <script src="/dev/blog/pub/js/config.js"></script>
     <script src="/dev/blog/pub/js/header.js"></script>
     <script src="/dev/blog/pub/js/footer.js"></script>
-    <script src="/dev/blog/pub/js/keep_out.js"></script>
+    <!-- <script src="/dev/blog/pub/js/keep_out.js"></script> -->
 </body>
 </html>
 
